--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3287,7 +3287,7 @@ input, select, textarea {
 				padding: 0 0.5em 0 0;
 			}
 
-		@media screen and (max-width: 980px) {
+		@media screen and (max-width: 380px) {
 
 			#header .links {
 				display: none;
@@ -3329,7 +3329,6 @@ input, select, textarea {
 		transition: opacity 0.5s ease;
 		margin: 0 auto;
 		max-width: 100%;
-		min-height: 100%; 
 		opacity: 1;
 		padding: 4.5em;
 		width: 90em;
@@ -3386,8 +3385,11 @@ input, select, textarea {
 		-ms-flex-grow: 1;
 		flex-grow: 1;
 		-ms-flex: 1;
+		padding: 4.5em;
 		width: 100%;
+		height: 80%;
 		justify-content: center;
+		justify-items: center;
 	}
 
 /* Sidebar */
